--- a/public/style/index.css
+++ b/public/style/index.css
@@ -1,5 +1,12 @@
+/* Navigation bar */
 div.nav-wrapper {
     background-color: rgb(40, 154, 207);
+}
+
+div#navbar {
+    position: sticky;
+    top: 0;
+    z-index: 10;
 }
 
 div.nav-wrapper a.title {
@@ -12,4 +19,28 @@ div.nav-wrapper a.title strong {
     color: hsl(263, 98%, 49%);
     font-size: 4rem;
     font-weight: bolder;
+}
+/* Navigation bar */
+
+
+/* Top */
+div.parallax-container {
+    height: calc(100vh - 64px);
+}
+
+div.parallax-container h1.title {
+    position: absolute;
+    top: 25%;
+    width: 100%;
+    text-align: center;
+    font-size: 12rem;
+    font-weight: bolder;
+    color: black;
+}
+
+div.parallax-container p.subtext {
+    position: absolute;
+    top: 58%;
+    left: 40%;
+    color: black;
 }
