--- a/public/style/index.css
+++ b/public/style/index.css
@@ -13,3 +13,13 @@ div.nav-wrapper a.title strong {
     font-size: 4rem;
     font-weight: bolder;
 }
+
+
+#vision {
+    display: flex;
+    justify-content: center;
+}
+
+.c_container {
+    width:500px;
+}
