--- a/public/style/index.css
+++ b/public/style/index.css
@@ -59,3 +59,11 @@ div.parallax-container p.subtext {
 /* Vision */
 
 
+/* Offering */
+#offering {
+    background-color: rgb(149, 203, 212);
+    text-align: center;
+}
+
+
+/* Offering */
