featur list layout

--- a/public/style/index.css
+++ b/public/style/index.css
@@ -67,3 +67,14 @@ div.parallax-container p.subtext {
 
 
 /* Offering */
+
+/* Features */
+.info_feature {
+    display: flex;
+    justify-content: center;
+}
+
+.featurePic {
+    width:350px;
+    height:250px;
+}
