--- a/public/style/index.css
+++ b/public/style/index.css
@@ -25,7 +25,7 @@ div.nav-wrapper a.title strong {
 
 /* Top */
 div.parallax-container {
-    height: calc(100vh - 64px);
+    height: calc(100vh - 56px);
 }
 
 div.parallax-container h1.title {
@@ -76,11 +76,12 @@ div.offering {
 
 div.row {
     margin: 0;
+    padding: 0rem 1.25rem;
 }
 
 div.valign-wrapper img.responsive-img {
     height: auto;
-    width: 90%;
+    width: 100%;
     border-radius: 2rem;
 }
 
