--- a/public/style/index.css
+++ b/public/style/index.css
@@ -55,3 +55,13 @@ footer.page-footer {
 .card {
   min-height: 342px;
 }
+
+#sociallist li{
+    float: right;
+    margin-left: 0.5rem;
+}
+
+#sociallist li a img {
+    width: 50px;
+
+}
