--- a/public/style/index.css
+++ b/public/style/index.css
@@ -21,21 +21,7 @@ p {
     width: 100%;
   }
 
-@media only screen and (max-width : 992px) {
-  .parallax-container .section {
-    position: absolute;
-    top: 40%;
-  }
-  #index-banner .section {
-    top: 10%;
-  }
-}
 
-@media only screen and (max-width : 600px) {
-  #index-banner .section {
-    top: 0;
-  }
-}
 
 .icon-block {
   padding: 0 15px;
@@ -59,7 +45,7 @@ footer.page-footer {
 
 .particle-network-animation {
     height: 100vh;
-    background-color: #b2d8d8;
+    background-color: white;
   }
   .particle-network-animation::before {
     z-index: -2;
@@ -128,7 +114,30 @@ footer.page-footer {
   }
   
 
-
   .transparentBG {
-    background-color: #b2d8d8;
+    background-color: white;
   }
+
+  .slogan {
+    line-height: 5px;
+    font-size: 4em;
+    width:300px;
+    font-weight: 600;
+    margin-bottom:11%;
+  }
+
+  #desc {
+    margin-top:2px;
+    width:380px;
+    font-size:1.2em;
+    font-family:'Raleway';
+    font-weight:600;
+  }
+
+  #introComponent {
+    position:absolute;
+    z-index:1;
+    margin-left: 10%;
+    margin-top: 5%;
+  }
+  
