--- a/public/style/index.css
+++ b/public/style/index.css
@@ -1,3 +1,8 @@
+html {
+    font-family: 'Montserrat', sans-serif !important;
+    font-family: 'Source Sans Pro', sans-serif !important;
+}
+
 nav ul a,
 nav .brand-logo {
   color: #444;
@@ -69,7 +74,7 @@ footer.page-footer {
 
 .particle-network-animation {
     height: 100vh;
-    background-color: #b2d8d8;
+    background-color: #ffffff;
   }
   .particle-network-animation::before {
     z-index: -2;
