--- a/public/style/signin.css
+++ b/public/style/signin.css
@@ -1,23 +1,21 @@
 body {
-    background: #222;
-    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('https://unsplash.it/1200/800/?random');
+    background: white;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
-    background-fill-mode: rgba(0,0,0,0.5);
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
   }
   .container {
-    background: white;
-    padding: 20px 25px;
+    background: #FFFAFA;
+    padding: 0px;
     border: 5px solid #26a69a;
-    width: 550px;
     height: auto;
     box-sizing: border-box;
     position: relative;
+    width:300px;
   }
   .col.s6 > .btn {
      width: 100%;
@@ -41,4 +39,29 @@ body {
     top: -20px;
     right: -20px;
   }
-  
+
+
+
+  #header {
+    padding:4%;
+    display:flex;
+    justify-content: center;
+    color:red;
+    background-color:white;;
+    margin:0;
+  }
+
+  .center {
+    display:flex;
+    flex-direction: center;
+  }
+
+
+  #contactContainer {
+    padding:4%;
+  }
+
+
+  .material-icons {
+    font-size:34px;
+  }
