--- a/public/style/index.css
+++ b/public/style/index.css
@@ -90,7 +90,7 @@ footer.page-footer {
     position: fixed;
     top: 50%;
     left: 50%;
-    background-image: radial-gradient(circle closest-side, rgba(102, 178, 178, 0.025), transparent);
+    background-image: radial-gradient(circle closest-side, #32CD32, transparent);
   }
   
   .glow-1 {
