--- a/public/style/chat.css
+++ b/public/style/chat.css
@@ -38,7 +38,7 @@
     position:absolute;
     width:100%;
     height:25%;
-    background-color:rgb(0,186,200);;
+    background-color: #008080;
 }
 
 #navRow {
