--- a/public/style/chat.css
+++ b/public/style/chat.css
@@ -205,3 +205,10 @@ nav .brand-logo {
       margin-left:10px;
   }
 
+.buttonRow {
+    margin-bottom:0px;
+}
+
+.smartReply {
+    margin-right:10px;
+}
